--- a/arch/arm/configs/jedi_hammerhead_defconfig
+++ b/arch/arm/configs/jedi_hammerhead_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION="-hammerhead-jedi.kernel_1.0"
+CONFIG_LOCALVERSION="-JediKernel_1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
